# linux-development

./: README.md
01_TerminalProject/: Dockerfile  Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: Dockerfile  Makefile  README  randomize.sh
04_Debugging/: Dockerfile  Makefile  range.c  scenario_01.gdb  scenario_02.gdb
05_Regexps/: Makefile  esub.c
07_Environmental/: Dockerfile  Makefile  Makefile.am  configure.ac  rhasher.c  run.sh
08_I18n/: Dockerfile  Makefile  configure.ac
08_I18n/po/: Makefile.am  ru.po
08_I18n/src/: Makefile.am  guess.c
09_PatchDiff/: Makefile  generate_maze_v0.c  v1.patch  v2.patch  v3.patch
10_LibTesting/: Dockerfile  Makefile  Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/tests/: Makefile.am  grow.c  pop.c  push.c  test.h  zero.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  build.sh  configure.ac  install_qq.sh
12_InstallPackaging/lib/: Makefile.am  libpalindrome.c  libpalindrome.h
12_InstallPackaging/po/: ru.po
12_InstallPackaging/sh/: install.sh  uninstall.sh
12_InstallPackaging/src/: Makefile.am  guess.c
12_InstallPackaging/tests/: Makefile.am  tests.ts
